feat : add nav-link class and relevant styling for page atttributes:  -A nav-link class has been inluded in each on the links within the nav section to help style them better.  - Font-awesome cdn link has been added to the top of the page  to help utilise icons from the site.  -style.css file has been created and populated with styling for general page, body and page navigation.   The styling approach is mobile first which targets most users.

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Ogwel Eugene | Developer Portfolio</title>
+       <link rel="stylesheet" href="style.css">
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
 </head>
 <body>
   <header>
     <nav>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="#about" class="nav-link">About</a>
+        <a href="#projects" class="nav-link">Projects</a>
+        <a href="#contact" class="nav-link">Contact</a>
     </nav>
   </header>
 
@@ -31,8 +33,17 @@
            Apart from coding, some other activities that I love to do include:
               Comunity Service,Hiking,playing chess and making new friends.
         </p>
-    </section>                    
-          <p>Want to collaborate or have a project in mind? <a href="#contact">Let’s talk</a></p>
+        <p>Want to collaborate or have a project in mind? <a href="#contact">Let’s talk</a></p>         
+    </section>
+
+     <section id="skills">
+            <h2>💻 Programming Languages</h2>
+            <div class="skills-container">
+                <span class="skill-tag">HTML5</span>
+                <span class="skill-tag">CSS3</span>
+                <span class="skill-tag">JavaScript</span>
+            </div>
+        </section>
   </main>
 </body>
 </html>
