feat : Add education section and relevant styling :   This commit introduces users education and a means to download their cv   - adds education summary and a cv download button.   - adds styling for the education section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
                 <span class="skill-tag">JavaScript</span>
             </div>
         </section>
+
+       <section id="education">
+            <h2>🎓 Educational Background</h2>
+            <p>I am currently pursuing a degree in computer science from University Of The People</p>
+            <a href="./src/STEPHEN_OGWEL_2025_CV.pdf" target="_blank" download class="btn">Download My CV</a>
+        </section>
+        
+     
+
   </main>
 </body>
 </html>
