feat : add interest and projects  This commit provides the interests and projects section relevant to the user.  - adds the interest sections which mentions the relevant interests of the developer. - adds styling for the interests and projects. The projects are clearly outlined which separates them   from interests

--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
             <a href="./src/STEPHEN_OGWEL_2025_CV.pdf" target="_blank" download class="btn">Download My CV</a>
         </section>
         
+        <section id="interests">
+            <h2>💡 Interests</h2>
+            <ul>
+                <li><strong>Web Development:</strong> Exploring modern frameworks and best practices.</li>
+                <li><strong>Tech Innovations:</strong> Keeping up with emerging trends in technology.</li>
+                <li><strong>UI/UX Design:</strong> Passionate about creating intuitive and visually appealing user interfaces.</li>
+            </ul>
+        </section>
+
+        <section id="projects">
+            <h2>🛠️ Projects</h2>
+            <div class="project-card">
+                <h3>Doxa Photography</h3>
+                <p>This is a simple photography website. It helps the user marketing  their photography to prospective clients.</p>
+                <a href="https://github.com/welgene/Doxa_Photography-" target="_blank">View Project</a>
+            </div>
+            <div class="project-card">
+                <h3>Contacts Manager</h3>
+                <p>This project is meant to help the user effectively manage contacts. Acquired backend skills in nodejs,express and mongodb</p>
+                <a href="https://github.com/welgene/contact-backend-api" target="_blank">View Project</a>
+            </div>
+        </section>
+
+
      
 
   </main>
