feat : add contact information  This commit provides a means of contacting the user .  - adds a contact form with action link to formspree which  handles the user-feedback separately . - adds styling for the form.

--- a/index.html
+++ b/index.html
@@ -74,8 +74,17 @@
             </div>
         </section>
 
+          <section id="contact">
+            <h2>📬 Contact Me</h2>
+            <p>Feel free to reach out for collaborations or just a friendly chat!</p>
+            <form action="https://formspree.io/f/mvgqbnor" method="POST">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" placeholder="Your Message" required></textarea>
+                <button type="submit" class="btn">Send Message</button>
+            </form>
+        </section>
 
-     
 
   </main>
 </body>
