feat : add page footer  This commit adds the footer of the page  .  - adds a footer section on the page with the current year and developer detail. - adds styling for the footer.

--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@
                 <button type="submit" class="btn">Send Message</button>
             </form>
         </section>
-
-
   </main>
+
+   <footer>
+        <p>&copy; 2025 - Eugene Ogwel</p>
+        </footer>
+
 </body>
 </html>
