fix: fixed broken project links :  This commit fixes bugs in the functionality of project links within the about section.  -adds project id to project 1 and project 2 within the projects section.
  These id attributes make the  links accessible

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 
         <section id="projects">
             <h2>🛠️ Projects</h2>
-            <div class="project-card">
+            <div class="project-card" id="project1">
                 <h3>Doxa Photography</h3>
                 <p>This is a simple photography website. It helps the user marketing  their photography to prospective clients.</p>
                 <a href="https://github.com/welgene/Doxa_Photography-" target="_blank">View Project</a>
             </div>
-            <div class="project-card">
+            <div class="project-card" id="project2">
                 <h3>Contacts Manager</h3>
                 <p>This project is meant to help the user effectively manage contacts. Acquired backend skills in nodejs,express and mongodb</p>
                 <a href="https://github.com/welgene/contact-backend-api" target="_blank">View Project</a>
